--- a/CarApplication/CarApplication.csproj
+++ b/CarApplication/CarApplication.csproj
@@ -36,4 +36,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Car.Data\Car.Data.csproj" />
+  </ItemGroup>
+
 </Project>
