--- a/CarApplication/appsettings.json
+++ b/CarApplication/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=KARINAPC\\SQLEXPRESS;Database=CarApplication;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
