--- a/CarApplication/CarApplication.csproj
+++ b/CarApplication/CarApplication.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Car.ApplicationServices\Car.ApplicationServices.csproj" />
     <ProjectReference Include="..\Car.Data\Car.Data.csproj" />
   </ItemGroup>
 
