--- a/CarApplication/appsettings.json
+++ b/CarApplication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KARINAPC\\SQLEXPRESS;Database=CarApplication;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=KARINAPC\\SQLEXPRESS;Database=CarApplication1;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
 
   "Logging": {
