Added 4 tests in CarTest, filled TestBase but CarTest project still in progress

--- a/CarTest/CarTest.csproj
+++ b/CarTest/CarTest.csproj
@@ -22,4 +22,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Car.ApplicationServices\Car.ApplicationServices.csproj" />
+    <ProjectReference Include="..\Car.Core\Car.Core.csproj" />
+  </ItemGroup>
+
 </Project>
