--- a/Car.ApplicationServices/Car.ApplicationServices.csproj
+++ b/Car.ApplicationServices/Car.ApplicationServices.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Car.Data\Car.Data.csproj" />
   </ItemGroup>
 
